--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.9.4",
     "@types/classnames": "^2.2.11",
+    "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "babel-polyfill": "^6.26.0",
@@ -69,6 +70,7 @@
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
     "imagesloaded": "^4.1.4",
+    "lodash": "^4.17.20",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.0",
     "pug-loader": "^2.4.0",
