--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "stylelint": "stylelint \"**/**/**/*.scss\" --fix",
     "precommit": "npm run eslint && npm run stylelint",
     "gh-pages": "gh-pages -d dist",
-    "watch": "webpack --watch --mode development"
+    "watch": "webpack --watch --mode development",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -17,6 +19,10 @@
     }
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.1.16",
+    "@storybook/addon-essentials": "^6.1.16",
+    "@storybook/addon-links": "^6.1.16",
+    "@storybook/html": "^6.1.16",
     "autoprefixer": "^8.2.0",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
