--- a/package.json
+++ b/package.json
@@ -79,8 +79,11 @@
     "lodash": "^4.17.20",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.0",
+    "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "pug-runtime": "^3.0.0",
     "sass-loader": "^8.0.2",
+    "storypug": "^1.0.0-rc.8",
     "style-loader": "^1.1.3",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
