--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/core": "^7.12.7",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.9.4",
+    "@storybook/addon-knobs": "^6.1.17",
     "@types/classnames": "^2.2.11",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
